trash: prevent an assert when trash cache is missing

SENTRY: KIO-A
BUG: 497268